[gd_scene load_steps=15 format=3 uid="uid://ij3bdhvutjdc"]

[ext_resource type="Script" uid="uid://bmlnebh2gvi7m" path="res://scripts/characters/enemies/advanced_shooter.gd" id="1_idjq7"]
[ext_resource type="Shader" uid="uid://bwseyl1xcp2qo" path="res://shaders/enemy.gdshader" id="3_8ej3x"]
[ext_resource type="Script" uid="uid://dgegklgqwvpxa" path="res://scripts/resources/char_texture.gd" id="3_idjq7"]
[ext_resource type="PackedScene" uid="uid://b2erii1hcv0u0" path="res://scenes/logic/RangeAggro.tscn" id="4_c3yda"]
[ext_resource type="PackedScene" uid="uid://diissjbt0i6uj" path="res://scenes/logic/HurtAggro.tscn" id="5_c1kgm"]
[ext_resource type="Shader" uid="uid://csess5xqvneiu" path="res://shaders/sphere_particle.gdshader" id="6_4ih7x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tb7kd"]
resource_local_to_scene = true
shader = ExtResource("3_8ej3x")
shader_parameter/health = 1.0
shader_parameter/opacity = 1.0
shader_parameter/velocity = Vector2(0, 0)

[sub_resource type="Image" id="Image_idjq7"]
data = {
"data": PackedByteArray(255, 255, 255, 255),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 1
}

[sub_resource type="ImageTexture" id="ImageTexture_c3yda"]
image = SubResource("Image_idjq7")
script = ExtResource("3_idjq7")
metadata/_custom_type_script = "uid://dgegklgqwvpxa"

[sub_resource type="CircleShape2D" id="CircleShape2D_u77d8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a60u8"]
shader = ExtResource("6_4ih7x")

[sub_resource type="Curve" id="Curve_wf87e"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_u77d8"]
curve = SubResource("Curve_wf87e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rwtxu"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.0
radial_velocity_min = 40.0
radial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 6.0
scale_curve = SubResource("CurveTexture_u77d8")

[node name="AdvancedShooter" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_idjq7")
fund_drop = 10
fund_drop_randomization = 0.3

[node name="Render" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tb7kd")
scale = Vector2(20, 20)
texture = SubResource("ImageTexture_c3yda")

[node name="RangeAggro" parent="." instance=ExtResource("4_c3yda")]
scale = Vector2(0.998148, 1)
aggro_range = 200
deaggro_range = 300

[node name="HurtAggro" parent="." instance=ExtResource("5_c1kgm")]
aggro_length = 8.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u77d8")

[node name="HurtParticles" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_a60u8")
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_rwtxu")

[node name="FiringCooldown" type="Timer" parent="."]

[node name="RetargetTimer" type="Timer" parent="."]

[connection signal="timeout" from="FiringCooldown" to="." method="_on_firing_cooldown_timeout"]
[connection signal="timeout" from="RetargetTimer" to="." method="target_player"]
